@@ -30,6 +30,10 @@ SVN trunk:
  * multiplayer game with "empty" as side no longer causes OOS (#4464)
  * random map generator now uses island_size (#4458)
  * various bug fixes and code cleanups
+ * campaign server
+   * Support new "timestamp" attribute
+   * Save persistent attributes in the campaign data
+ * utils: added weblist.pl and webtgz.pl web interface programs
 
 Version 1.0rc1:
  * language and i18n:
